# rmalloc

./: README.rst  memory-fragmentation-solved.ps  valgrind-memcheck.patch
allocation-logging/: memlogparser.pl  memory-alloc-sizes.sh
allocation-logging/logs/: aftonbladet-gp.ps  aftonbladet.ps  aftonbladet.tar.bz2  blank.ps  blank.tar.bz2  gp.log.bz2  gp.ps  readme.txt
doc/: rmalloc.txt  worklog.txt
doc/paper/: Cover_page_Chalmers.doc  allocator-types.rst  appendix.rst  build.sh  conclusion.rst  default-original.tex  default.tex  design.rst  frontpage-original.tex  frontpage.tex  future-work.rst  introduction.rst  jeff.rst  main.rst  method.rst  paper.tex  references.rst  regenerate-allocstats.sh  results.rst  simulating-locking.rst  steve.rst  todo-checklist.rst  weighted-speed-and-space.ods
doc/paper/allocstats/latex-allocstats-huvudfoting/: latex-lockopsfull-plot_dlmalloc-kill1-allocstats  latex-lockopsfull-plot_jemalloc-kill1-allocstats  latex-lockopsfull-plot_rmalloc-kill1-allocstats  latex-lockopsfull-plot_rmalloc_compacting-kill1-allocstats  latex-lockopsfull-plot_rmalloc_compacting_maxmem-kill1-allocstats
doc/paper/allocstats/ls-allocstats-haddock/: run-allocstats-fixed.sh  (+6 more)
doc/paper/graphics/: buddyalloc-2k-list.dot  build.sh  compact-adjacent-relink-0.dot  compact-adjacent-relink-1.dot  compact-adjacent-relink-2.dot  compact-nonadjacent-relink-0.dot  compact-nonadjacent-relink-1.dot  compact-nonadjacent-relink-2a.dot  compact-nonadjacent-relink-2b.dot  compact-nonadjacent-relink-3a.dot  compact-nonadjacent-relink-3b.dot  compact-nonadjacent-relink-after.dot  compact-nonadjacent-relink-before.dot  jeff-free-blockslots.dot  rebuild.sh  render.sh  steve.dot
doc/paper/locking-lifetime-explanation/: locking-lifetime-graph.py
doc/presentation/: index.html  scatterplot.ods
papers/: TCMalloc   Thread-Caching Malloc.html  ismm98.ps  urls.txt
src/: Makefile  building-googletest.txt  logparser.lisp  main.c  plotter.asd  plotter.lisp  rmalloc.c  rmalloc.h  rmalloc_internal.h  tests.c
src/NO_LONGER_IN_USE_DELETE_ME/: logparser.lisp  main.c  plotter.lisp  tests.c
src/buddy/: .buddy.c.swp  .test_user_alloc.cpp.swp  Makefile  buddy.c  buddy.h  main.cpp  randrange.sh  run_tests  test_user_alloc.cpp  testint_alloc.cpp
src/compact/: Makefile  compact.c  compact.h  compact_internal.h  listsort.c  test_internal.cpp
src/emulator/: Makefile  README.txt  dlmalloc-2.8.6.h  grapher.py  op2lifetime.py  plot.cpp  plot.h  plot_cmalloc.cpp  plot_dlmalloc.cpp  plot_fragment_image.py  plot_optimal.cpp  plot_rmalloc.cpp  result.soffice-ops-crash  run.sh  run_maxmem.sh  run_maxmem_payload.sh
src/jeff/: Makefile  compact.c  compact.h  compact_internal.h  listsort.c  test_internal.cpp  tests.sh  valgrind.sh
src/locktest/: lorem-ipsum-10.odt  plot_cmalloc.cpp  plot_common.h  translate-2.py  translate-3-2.py  translate.py
src/locktest/blocks/: blocks.c  blocks.pyx
src/locktest/plot/: Makefile  grapher.py  plot.cpp  plot.h  plot_optimal.cpp
src/memtrace-runs/: memtrace-run.sh
src/steve/: Makefile  README.txt  build.sh  dlmalloc.c  grapher.py  plot.cpp  plot.h  plot_dlmalloc.cpp  plot_rmalloc.cpp  result.soffice-ops  run_allocator_stats.sh  run_allocator_stats_payload.sh  run_graphs_from_allocstats.py  run_maxmem_payload.sh  run_memory_frag_animation.sh  run_memory_frag_animation_plot_animation.py
src/steve/drivers/: Makefile  plot_cmalloc.cpp  plot_dlmalloc.cpp  plot_jemalloc.cpp  plot_rmalloc.cpp  plot_tcmalloc.cpp
src/steve/memtrace-to-ops/: translate-memtrace-to-ops.py  translate-ops-to-histogram.py  translate-ops-to-locking-lifetime.py
src/valgrind-memory-log-to-handle-mapper/: correct-but-slow--translate-ops-to-histogram.py  most-likely-unused__translate-2.py  translate-3-2.py  translate-memtrace-to-ops.py  translate-ops-to-histogram.py  translate-ops-to-locking-lifetime.py
src/valgrind-memory-log-to-handle-mapper/blocks/: blocks.pyx
valgrind/: SVN_INFO  configure.in
valgrind-3.9.0/: config.h
valgrind-3.9.0/coregrind/m_debuginfo/: readstabs.c
valgrind-3.9.0/memcheck/: mc_include.h  mc_malloc_wrappers.c  mc_translate.c
valgrind/coregrind/m_debuginfo/: readelf.c
valgrind/lackey/: Makefile  Makefile.am  lk_main.c
valgrind/memcheck/: mc_include.h  mc_malloc_wrappers.c  mc_translate.c
(+39 files in other folders)
